# Data-Mining-101

./: README.md  main.py  pyproject.toml
ACD1/: ACD1_LuisGonzalez.ipynb
APE_practica_3/cars/: González_Luis_APEN3.ipynb
APE_practica_4/: González_Luis_TPEN4.ipynb
Decision Trees/: decision_tree.ipynb
Dimensionalidad/: Gonzalez_Luis_APE9.ipynb  PCA.ipynb
MLP/: Gonzalez_Luis_APE8.ipynb
NLP/: nlp.ipynb
SVM/: svm.ipynb
actividad en clase/: Gonzalez_Luis_TCN2.ipynb
caso de estudio/: Gonzalez_Luis_ACD5.ipynb  semana1.txt  semana2.xlsx
data-analisys/: card_fraud.ipynb
evaluacion 3/: Gonzalez_Luis_EP3.ipynb
evaluación 2/: González_Luis_EP2.ipynb
kmeans/: Gonzalez_Luis_TPEN5.ipynb
neural networks/: Gonzalez_Luis_ACD4.ipynb
perceptron multicapa/: Gonzalez_Luis_TPEN7.ipynb
practica 2/: Gonzalez_Luis_APE2.ipynb
practica 3/: Gonzalez_Luis_APE3.ipynb
